# alfred-openai

./: Cargo.toml  Makefile  config.toml
.github/workflows/scripts/: build_release.sh
src/: chat.rs  main.rs  stt.rs  tts.rs
src/openai/: chat.rs  mod.rs  stt.rs  tts.rs
