[package]
name = "alfred-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
openai-api-rs = "5.2.0"
alfred-rs = { path = "../alfred-rs" }
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["v4"] }

[[bin]]
name = "alfred-openai-chat"
path = "src/chat.rs"

[[bin]]
name = "alfred-openai-stt"
path = "src/stt.rs"

[[bin]]
name = "alfred-openai-tts"
path = "src/tts.rs"
