[package]
name = "alfred-openai"
version = "0.2.0"
edition = "2021"

[dependencies]
openai-api-rs = "5.2"
alfred-core = "0.1"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4"] }

[[bin]]
name = "alfred-openai-chat"
path = "src/chat.rs"

[[bin]]
name = "alfred-openai-stt"
path = "src/stt.rs"

[[bin]]
name = "alfred-openai-tts"
path = "src/tts.rs"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
dbg_macro = "deny"
decimal_literal_representation = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
integer_division = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
print_stdout = "deny"
rest_pat_in_fully_bound_structs = "deny"
todo = "deny"
unimplemented = "deny"
unneeded_field_pattern = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"
unwrap_used = "deny"
or_fun_call = "deny"
expect_fun_call = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
missing_errors_doc = "allow"